@@ -16,21 +16,30 @@
 
 package com.hedera.node.app.service.contract.impl.hevm;
 
+import static com.hedera.node.app.service.contract.impl.utils.ConversionUtils.pbjLogsFrom;
+import static com.hedera.node.app.service.contract.impl.utils.ConversionUtils.tuweniToPbjBytes;
 import static java.util.Objects.requireNonNull;
 
+import com.hedera.hapi.node.base.ContractID;
 import com.hedera.hapi.node.base.ResponseCodeEnum;
 import com.hedera.hapi.node.contract.ContractLoginfo;
+import com.hedera.node.app.service.contract.impl.utils.ConversionUtils;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
+import java.util.Collections;
 import java.util.List;
+import org.hyperledger.besu.datatypes.Wei;
+import org.hyperledger.besu.evm.frame.MessageFrame;
+import org.hyperledger.besu.evm.log.Log;
 
 public record HederaEvmTransactionResult(
         long gasUsed,
         long gasPrice,
-        @Nullable Bytes recipient,
+        @Nullable ContractID recipientId,
+        @Nullable ContractID recipientEvmAddress,
         @NonNull Bytes output,
-        @Nullable Bytes haltReason,
+        @Nullable String haltReason,
         @Nullable ResponseCodeEnum abortReason,
         @Nullable Bytes revertReason,
         @NonNull List<ContractLoginfo> logs) {
@@ -47,6 +56,81 @@ public record HederaEvmTransactionResult(
      * @return the result
      */
     public static HederaEvmTransactionResult abortFor(@NonNull final ResponseCodeEnum reason) {
-        return new HederaEvmTransactionResult(0, 0, null, Bytes.EMPTY, null, reason, null, List.of());
+        return new HederaEvmTransactionResult(
+                0, 0, null, null, Bytes.EMPTY, null, reason, null, Collections.emptyList());
+    }
+
+    /**
+     * Create a result for a transaction that succeeded.
+     *
+     * @param gasUsed the gas used by the transaction
+     * @return the result
+     */
+    public static HederaEvmTransactionResult successFrom(
+            final long gasUsed,
+            @NonNull final ContractID recipientId,
+            @NonNull final ContractID recipientEvmAddress,
+            @NonNull final MessageFrame frame) {
+        requireNonNull(frame);
+        return successFrom(
+                gasUsed, frame.getGasPrice(), recipientId, recipientEvmAddress, frame.getOutputData(), frame.getLogs());
+    }
+
+    public static HederaEvmTransactionResult successFrom(
+            final long gasUsed,
+            @NonNull final Wei gasPrice,
+            @NonNull final ContractID recipientId,
+            @NonNull final ContractID recipientEvmAddress,
+            @NonNull final org.apache.tuweni.bytes.Bytes output,
+            @NonNull final List<Log> logs) {
+        return new HederaEvmTransactionResult(
+                gasUsed,
+                requireNonNull(gasPrice).toLong(),
+                requireNonNull(recipientId),
+                requireNonNull(recipientEvmAddress),
+                tuweniToPbjBytes(requireNonNull(output)),
+                null,
+                null,
+                null,
+                pbjLogsFrom(requireNonNull(logs)));
+    }
+
+    /**
+     * Create a result for a transaction that failed.
+     *
+     * @param gasUsed the gas used by the transaction
+     * @return the result
+     */
+    public static HederaEvmTransactionResult failureFrom(final long gasUsed, @NonNull final MessageFrame frame) {
+        requireNonNull(frame);
+        return new HederaEvmTransactionResult(
+                gasUsed,
+                frame.getGasPrice().toLong(),
+                null,
+                null,
+                Bytes.EMPTY,
+                frame.getExceptionalHaltReason().map(Object::toString).orElse(null),
+                null,
+                frame.getRevertReason().map(ConversionUtils::tuweniToPbjBytes).orElse(null),
+                Collections.emptyList());
+    }
+
+    public static HederaEvmTransactionResult resourceExhaustionFrom(
+            final long gasUsed, final long gasPrice, @NonNull final ResponseCodeEnum reason) {
+        requireNonNull(reason);
+        return new HederaEvmTransactionResult(
+                gasUsed,
+                gasPrice,
+                null,
+                null,
+                Bytes.EMPTY,
+                null,
+                null,
+                Bytes.wrap(reason.name()),
+                Collections.emptyList());
+    }
+
+    public boolean isSuccess() {
+        return abortReason == null && revertReason == null && haltReason == null;
     }
 }
